--- a/APPD/Views/LoginView.xaml
+++ b/APPD/Views/LoginView.xaml
@@ -1,35 +1,52 @@
-﻿<ResourceDictionary x:Class="APPD.Views.LoginView"
+﻿<UserControl x:Class="APPD.Views.LoginView"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:APPD"
                     xmlns:viewModels="clr-namespace:APPD.ViewModels"
                     xmlns:models="clr-namespace:APPD.Models"
                     xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit">
-    <DataTemplate DataType="{x:Type viewModels:LoginViewModel}">
-        <StackPanel Margin="10" Width="300" Height="400" RenderTransformOrigin="0, 0" >
-            <StackPanel.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform X="160" Y="-47"/>
-                </TransformGroup>
-            </StackPanel.RenderTransform>
-            <extToolkit:WatermarkTextBox x:Name="UsernameInput" 
-                Margin="10"
-                FontFamily="Segoe UI Light"
-                FontSize="16"
-                Watermark="Username"></extToolkit:WatermarkTextBox>
-            <PasswordBox Margin="10" x:Name="passwordBox" FontFamily="Segoe UI Light" FontSize="16" Opacity="0.7"
+    <StackPanel Margin="10" Width="300" Height="400" RenderTransformOrigin="0, 0" >
+        <StackPanel.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform/>
+                <TranslateTransform X="160" Y="-47"/>
+            </TransformGroup>
+        </StackPanel.RenderTransform>
+        <extToolkit:WatermarkTextBox x:Name="UsernameInput" 
+                                         Margin="10"
+                                         FontFamily="Segoe UI Light"
+                                         FontSize="16"
+                                         Watermark="Username"
+                                         Text="{Binding Username}"></extToolkit:WatermarkTextBox>
+        <PasswordBox Margin="10" x:Name="passwordBox" FontFamily="Segoe UI Light" FontSize="16" Opacity="0.7"
                          GotFocus="passwordBoxFocused" LostFocus="passwordBoxLostFocus">
-                <PasswordBox.Background>
-                    <VisualBrush Stretch="None" AlignmentX="Left">
-                        <VisualBrush.Visual>
-                            <TextBox Text="Password"/>
-                        </VisualBrush.Visual>
-                    </VisualBrush>
-                </PasswordBox.Background>
-            </PasswordBox>
-        </StackPanel>
-    </DataTemplate>
-</ResourceDictionary>
+            <PasswordBox.Background>
+                <VisualBrush Stretch="None" AlignmentX="Left">
+                    <VisualBrush.Visual>
+                        <Label>Password</Label>
+                    </VisualBrush.Visual>
+                </VisualBrush>
+            </PasswordBox.Background>
+            <PasswordBox.InputBindings>
+                <KeyBinding 
+                    Key="Return"
+                    Command="{Binding LogInCommand}"
+                    CommandParameter="{Binding ElementName=passwordBox}"
+                    />
+            </PasswordBox.InputBindings>
+        </PasswordBox>
+        <Button Content="Log In"
+                    Margin="10"
+                    Width="130" Height="50"
+                    FontFamily="Segoe UI Light" FontSize="20"
+                    Command="{Binding LogInCommand}" 
+                    CommandParameter="{Binding ElementName=passwordBox}"></Button>
+        <Button Content="Sign Up" 
+                    Margin="10"
+                    Width="130" Height="50"
+                    FontFamily="Segoe UI Light" FontSize="20"
+                    ></Button>
+    </StackPanel>
+</UserControl>
