--- a/APPD/App.xaml
+++ b/APPD/App.xaml
@@ -2,4 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              >
+    <Application.Resources>
+        <ControlTemplate x:Key="HomeLogoButton" TargetType="Button">
+            <Border Name="border">
+                <!--<Image Source="pack://application:,,,/Assets/Images/Logo.png"></Image>-->
+                <!--no need for content presenter-->
+                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter TargetName="border" Property="BorderBrush" Value="Black" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Application.Resources>
 </Application>
