--- a/APPD/Views/HomeView.xaml
+++ b/APPD/Views/HomeView.xaml
@@ -6,8 +6,10 @@
              xmlns:local="clr-namespace:APPD"
              xmlns:views="clr-namespace:APPD.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="800">
-    <StackPanel>
-        <views:NavBarView />
+             d:DesignHeight="675" d:DesignWidth="1200">
+    <StackPanel Orientation="Vertical">
+        <views:NavBarView Panel.ZIndex="1"/>
+        <views:TrendingView Panel.ZIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
     </StackPanel>
 </UserControl>
