--- a/APPD/Views/NavBarView.xaml
+++ b/APPD/Views/NavBarView.xaml
@@ -5,15 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:APPD.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal" Background="#FF252525" Height="50" Width="800">
-        <Button Content="Home" 
-                Padding="30"
-                Background="White"
-                BorderBrush="{x:Null}" 
-                Foreground="Black" 
-                FontFamily="Segoe UI Light" FontSize="16"
-                Panel.ZIndex="10">
-        </Button>
+             d:DesignHeight="80" d:DesignWidth="1200">
+    <StackPanel Width="1200" Height="80" Margin="0" Background="#FF828282" Orientation="Horizontal">
+        <Button Width="70"
+                Height="70"
+                Style="{StaticResource HomeLogoButton}" 
+                />
+
     </StackPanel>
 </UserControl>
