--- a/APPD/Views/TrendingView.xaml
+++ b/APPD/Views/TrendingView.xaml
@@ -10,10 +10,10 @@
         <TextBox BorderThickness="0" 
                  Background="Black" 
                  Foreground="White"
-                 Padding="20 5 0 5" FontFamily="Impact" FontSize="25"
+                 Padding="20 5 0 5" FontFamily="Impact" FontSize="25" Focusable="False" IsTabStop="False"
                  >
             TRENDING</TextBox>
-        <ItemsControl>
+        <ItemsControl IsTabStop="False" Focusable="False">
         </ItemsControl>
     </StackPanel>
 </UserControl>
