--- a/APPD/Views/HomeDisplayListView.xaml
+++ b/APPD/Views/HomeDisplayListView.xaml
@@ -15,7 +15,7 @@
             </ScrollViewer.Resources>
             <!--Note: DisplayedItems will be a typeless ArrayList containing both Accounts to display and strings
             as section headers-->
-            <ItemsControl ItemsSource="{Binding DisplayedItems}">
+            <ItemsControl ItemsSource="{Binding DisplayedItems}" x:Name="itemsControl">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <VirtualizingStackPanel Orientation="Vertical"/>
@@ -32,14 +32,20 @@
                                />
                     </DataTemplate>
 
-                    <DataTemplate DataType="{x:Type models:Account}">
+                    <DataTemplate DataType="{x:Type models:Account}" x:Name="AccountElement">
                         <Grid Background="#FFDDDDDD" Margin="40 20 80 20">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="500"/>
+                                <ColumnDefinition Width="200" />
+                                <ColumnDefinition Width="400"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
+                            <Image Source="pack://application:,,,/Assets/SimulatedServer/Assets/Images/default.png" 
+                                   Grid.Column="0"
+                                   Width="160" Height="160"
+                                   Margin="20"
+                                   />
                             <StackPanel Orientation="Vertical"
-                                        Grid.Column="0"
+                                        Grid.Column="1"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Center">
                                 <Label Content="{Binding Name}"
@@ -54,7 +60,7 @@
                                        />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" 
-                                        Grid.Column="1"
+                                        Grid.Column="2"
                                         HorizontalAlignment="Right" 
                                         VerticalAlignment="Center" >
                                 <Label Content="{Binding DanknessPerDayShortDisplay}"
@@ -63,12 +69,17 @@
                                         />
                                 <Button Content=">"
                                         FontFamily="Impact"
-                                        Padding="16 6"
+                                        Padding="16 10"
                                         Margin="6 6 20 6"
                                         BorderThickness="0"
                                         FontSize="30" Background="#FFA2A2A2"
                                         Foreground="#FFD8EAFF" HorizontalAlignment="Right" VerticalAlignment="Center"
+                                        Command="{Binding ElementName=itemsControl, Path=DataContext.AccountCommand}"
+                                        CommandParameter="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                        DataContext=""
                                         />
+                                <!--NOTE: Setting RelativeSource to an ancestor of type ContentPresenter will effectively
+                                return the source of the item in iteration itself-->
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
