--- a/APPD/Views/LoginView.xaml
+++ b/APPD/Views/LoginView.xaml
@@ -1,10 +1,14 @@
 ﻿<UserControl x:Class="APPD.Views.LoginView"
-                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:APPD"
-                    xmlns:viewModels="clr-namespace:APPD.ViewModels"
-                    xmlns:models="clr-namespace:APPD.Models"
-                    xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit" IsTabStop="False"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:APPD"
+             xmlns:viewModels="clr-namespace:APPD.ViewModels"
+             xmlns:models="clr-namespace:APPD.Models"
+             xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit" IsTabStop="False"
+             mc:Ignorable="d"  
+             d:DesignWidth="1200" d:DesignHeight="675"
              >
     <Grid Width="1200" Height="675" RenderTransformOrigin="0.5,0.5">
         <Grid.Background>
